adding static footer

--- a/index.html
+++ b/index.html
@@ -193,6 +193,21 @@
           </p>
         </div>
       </section>
+      <footer>
+        <span>Erik Björn</span>
+        <span>|</span>
+        <span class="contact-details">0706187603</span>
+        <span>|</span>
+        <span class="contact-details">erik.g.bjoern@gmail.com</span>
+        <span>|</span>
+        <a href="https://www.linkedin.com/in/erikbjoern/" target="_blank">
+          LinkedIn
+        </a>
+        <span>|</span>
+        <a href="https://github.com/erikbjoern" target="_blank">
+          GitHub
+        </a>
+      </footer>
     </div>
   </body>
 </html>
