displaying small icons on small viewports

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <body>
     <div class="main-container">
       <div class="header-placement">
-        <!-- <div class="cursor-blocker" onmouseover="expandHeader()" onmouseout="collapseHeader()"></div> -->
         <header onmouseover="expandHeader()" onmouseout="collapseHeader()">
           <span class="E">E<span>rik Björn</span></span>
           <span class="vertical-divider">|</span>
@@ -23,7 +22,7 @@
             <img class="linkedin white large-icon" src="Assets/LI-Logo.png" alt="LinkedIn logo" />
             <img class="linkedin white small-icon" src="Assets/LI-In-Bug.png" alt="LinkedIn logo" />
           </a>
-          <span class="vertical-divider">|</span>
+          <span class="linkedin-github-divider">|</span>
           <a href="https://github.com/erikbjoern" target="_blank">
             <img class="github large-icon" src="Assets/GitHub_Logo_White.png" alt="GitHub logo" />
             <img class="github small-icon" src="Assets/GitHub-Mark-Light-32px.png" alt="GitHub logo" />
