replacing links with logos, currently displaying only large versions

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="main-container">
       <div class="header-placement">
-        <div class="cursor-blocker" onmouseover="expandHeader()" onmouseout="collapseHeader()"></div>
+        <!-- <div class="cursor-blocker" onmouseover="expandHeader()" onmouseout="collapseHeader()"></div> -->
         <header onmouseover="expandHeader()" onmouseout="collapseHeader()">
           <span class="E">E<span>rik Björn</span></span>
           <span class="vertical-divider">|</span>
@@ -20,11 +20,13 @@
           <span class="contact-details">erik.g.bjoern@gmail.com</span>
           <span class="vertical-divider">|</span>
           <a href="https://www.linkedin.com/in/erikbjoern/" target="_blank">
-            LinkedIn
+            <img class="linkedin white large-icon" src="Assets/LI-Logo.png" alt="LinkedIn logo" />
+            <img class="linkedin white small-icon" src="Assets/LI-In-Bug.png" alt="LinkedIn logo" />
           </a>
           <span class="vertical-divider">|</span>
           <a href="https://github.com/erikbjoern" target="_blank">
-            GitHub
+            <img class="github large-icon" src="Assets/GitHub_Logo_White.png" alt="GitHub logo" />
+            <img class="github small-icon" src="Assets/GitHub-Mark-Light-32px.png" alt="GitHub logo" />
           </a>
         </header>
       </div>
@@ -195,11 +197,13 @@
         </div>
         <div class="footer-links">
           <a href="https://www.linkedin.com/in/erikbjoern/" target="_blank">
-            LinkedIn
+            <img class="linkedin large-icon" src="Assets/LI-Logo.png" alt="LinkedIn logo" height="20px"/>
+            <img class="linkedin small-icon" src="Assets/LI-In-Bug.png" alt="LinkedIn logo" height="20px"/>
           </a>
           <span class="LinkedIn/GitHub divider">|</span>
           <a href="https://github.com/erikbjoern" target="_blank">
-            GitHub
+            <img class="github large-icon" src="Assets/GitHub_Logo.png" alt="GitHub logo" height="28px" style="margin-top: -5px" />
+            <img class="github small-icon" src="Assets/GitHub-Mark-32px.png" alt="GitHub logo" height="22px" style="margin: -2px 0 0 3px" />
           </a>
         </div>
       </footer>
