restoring 'cursor-blocker'

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <div class="main-container">
       <div class="header-placement">
+        <div class="cursor-blocker" onmouseover="expandHeader()" onmouseout="collapseHeader()"></div>
         <header onmouseover="expandHeader()" onmouseout="collapseHeader()">
           <span class="E">E<span>rik Björn</span></span>
           <span class="vertical-divider">|</span>
