adding Swedish page as well, toggle between EN/SE

--- a/swedish.html
+++ b/swedish.html
@@ -11,7 +11,11 @@
   <body>
     <div class="main-container">
       <div class="header-placement">
-        <div class="language-switch" onmouseover="keepHeaderOpenOnSmallScreens()" onmouseout="collapseHeader()">
+        <div 
+          class="language-switch"
+          onmouseover="keepHeaderOpenOnSmallScreens()" 
+          onmouseout="collapseHeader()"
+        >
           <a href="index.html">EN</a><span>|</span><a href="swedish.html">SE</a>
         </div>
         <div class="cursor-blocker" onmouseover="expandHeader()" onmouseout="collapseHeader()"></div>
@@ -35,17 +39,17 @@
       </div>
       <h1>CV</h1>
       <section>
-        <h2>My skills as a developer</h2>
+        <h2>Mina färdigheter som utvecklare</h2>
         <div class="skills">
           <div>
-            <h3>Agile methods</h3>
+            <h3>Agila metoder</h3>
             <ul>
               <li>Scrum</li>
-              <li>Test driven dev. (TDD)</li>
-              <li>Iterative and incremental development</li>
-              <li>Pair programming</li>
-              <li>Refactoring</li>
-              <li>Capturing requirements</li>
+              <li>Testdriven utv. (TDD)</li>
+              <li>Iterativ utveckling</li>
+              <li>Parprogrammering</li>
+              <li>Refaktorisering</li>
+              <li>Kravhantering</li>
             </ul>
           </div>
           <div>
@@ -80,110 +84,103 @@
         </div>
       </section>
       <section class="education">
-        <h2>Education</h2>
-        <h3>Web development, fullstack</h3>
+        <h2>Utbildning</h2>
+        <h3>Webbutveckling, fullstack</h3>
         <p class="heading-4">
-          <span><strong>Craft Academy</strong>, Gothenburg, Sweden</span><span>March - June 2020</span>
+          <span><strong>Craft Academy</strong>, Göteborg</span><span>mars - juni 2020</span>
         </p>
         <p>
-          14w intensive bootcamp. The course is characterised by a practical
-          approach, giving students a lot of opportunities to develop not only
-          their coding skills, but also teamwork, communication, planning and
-          organising projects, researching, debugging and more. I received a
+          14v intensivutbildning, starkt präglad av praktisk tillämpning. Jag fick väldigt goda
+          möjligheter att inte bara utveckla mina färdigheter i att skriva kod, utan också i samarbete,
+          kommunikation, att planera och organisera projekt, hitta information, felsöka mm. Jag
+          mottog ett
           <a
             href="https://certificates.craftacademy.se/verify/df8df7c008239da61afeedc78dedd4068cde6838e407c7a6711049c01fbca339"
             target="_blank"
           >
-            certificate of excellence
+            intyg på goda prestationer
           </a>
-          , upon successfully completing the course. Main content:
+          vid utbildningens slut. Kursens huvudinnehåll är:
         </p>
         <ul>
           <li>
-            Building front- and backend applications, mainly in React.js and
-            Ruby on Rails
+            Bygga front end- och back end-applikationer i främst React.js och Ruby on Rails
           </li>
           <li>
-            Practising Scrum and Agile methods, such as:
+            Tillämpa Scrum och andra agila arbetsmetoder såsom:
             <ul>
-              <li>Test driven development, mainly using Cypress and RSpec</li>
-              <li>Pair programming</li>
+              <li>Testdriven utveckling (TDD) främst med Cypress och RSpec</li>
+              <li>Parprogrammering</li>
               <li>
-                Continuous Integration and Continuous Deployment (CI / CD)
+                Kontinuerlig integration och leverans/deployment (CI / CD)
               </li>
             </ul>
           </li>
-          <li>Utilising Version control, using Git and GitHub</li>
+          <li>Använda versionskontroll med Git och GitHub</li>
           <li>
-            Theory about application structure (The MVC pattern), HTTP and REST
+            Lära teori om bl.a. applikationsstruktur (The MVC pattern), HTTP och REST
           </li>
         </ul>
-        <h3>Technology Programme</h3>
+        <h3>Teknikprogrammet</h3>
         <p class="heading-4">
-          <span><strong>Åkrahällskolan</strong>, Nybro, Sweden</span><span>Aug 2012 - June 2015</span>
+          <span><strong>Åkrahällskolan</strong>, Nybro</span><span>aug 2012 - juni 2015</span>
         </p>
         <p>
-          Equivalent to high school education, with specialisation in design and
-          product development. Main subjects were math, construction, technology
-          and physical science which I enjoyed a lot. I see many correlations
-          between math and programming.
+          Högskoleförberedande gymnasieutbildning med inriktning på design och produktutveckling.
+          Huvudämnena för oss var matematik, konstruktion och fysik, vilka intresserade mig mycket.
+          Jag ser många samband mellan matematik och programmering.
         </p>
       </section>
       <section class="work-life">
-        <h2>Work life experience</h2>
-        <h3>Carpenter</h3>
+        <h2>Arbetslivserfarenhet</h2>
+        <h3>Snickare</h3>
         <p class="heading-4">
-          <span><strong>Mark & Grund AB</strong>, Vännäs, Sweden</span><span>Sep 2019 - Feb 2020</span>
+          <span><strong>Mark & Grund AB</strong>, Vännäs</span><span>sep 2019 - feb 2020</span>
         </p>
         <p>
-          As a carpenter in a construction groundworks company I would mostly
-          build fences, sandboxes and assemble playground equipment in
-          connection to laying the foundation for schoolyards, parking lots and
-          so on. We also built the exterior of an extension of a villa, and
-          quite often I would do groundworks tasks with the others, such as
-          preparing the ground for asphalt and casting bicycle stands.
+          Heltidsanställning främst som snickare i anslutning till anläggning av en skolgård och
+          allmänna uteplatser samt på en utbyggnad av en villa, allt detta tillsammans med en
+          handledare. Som regel fanns inte detaljer givna, utan var något vi fick bestämma själva.
+          Jag fick även erfarenhet av anläggningsarbete som VA-anläggning, plattsättning mm.
         </p>
-        <h3>Nursing assistant</h3>
+        <h3>Vårdbiträde i hemtjänsten</h3>
         <p class="heading-4">
-          <span><strong>Umeå municipality</strong>, Tavelsjö, Sweden</span><span>Feb - Aug 2019</span>
+          <span><strong>Umeå kommun</strong>, Tavelsjö</span><span>feb - aug 2019</span>
         </p>
         <p>
-          Working in home care service, my main responsibilities were to give
-          medicine including insulin, cook and serve food, give social support,
-          clean and help with personal hygiene.
+          90% anställning som vikarie i kommunal hemtjänst. Läkemedels- och insulindelegering. I
+          arbetsuppgifterna ingick främst att ge mediciner, laga eller servera mat och ge socialt stöd,
+          men även t.ex. att hjälpa till med personlig vård och hygien samt daglig dokumentation.
         </p>
-        <h3>Odd jobs</h3>
-        <p class="heading-4">Norway and Sweden</span><span>Oct 2017 - Feb 2019</p>
+        <h3>Takskottare, kock och andra tillfälliga jobb</h3>
+        <p class="heading-4">Norge och Sverige</span><span>oct 2017 - feb 2019</p>
         <p>
-          For a period of about 18 months, I got the opportunity to work with a
-          lot of different jobs, with everything from chicken production, waste
-          disposal and shoveling snow off of roof tops, to graphic design and
-          woodwork. It gave me very different and valuable experiences and I
-          learned that having the opportunity to keep improving and learning is
-          very important to me.
+          Under en period på ca ett och ett halvt år fick jag möjlighet att jobba med en mängd olika
+          saker, bl.a. som kock, snickare, grafisk designer, takskottare, med kycklingproduktion,
+          sophämtning och i tryckeri. Det gav mig väldigt mycket erfarenhet och insikter - jag kan
+          jobba med mycket mer än jag hade trott, men trivs bäst där jag aldrig slutar utvecklas.
         </p>
-        <h3>Social/youth worker</h3>
+        <h3>Miljøarbeider</h3>
         <p class="heading-4">
-          <span><strong>Gjennestad VGS</strong>, Stokke, Norway</span><span>Aug 2016 - June 2017</span>
+          <span><strong>Gjennestad VGS</strong>, Stokke, Norge</span><span>aug 2016 - juni 2017</span>
         </p>
         <p>
-          My responsibilities were to plan out and arrange activities and events
-          for students at a boarding school, and in other ways contribute to the
-          social environment there. The work hours were mostly evenings and
-          weekends.
+          Rollen motsvarar ett slags fritidspedagog, på en norsk gymnasieskola med internat. Min
+          uppgift var att tillsammans med en kollega bidra till skolans sociala miljö, genom att bl.a.
+          planera och arrangera aktiviteter och evenemang för eleverna kvällstid och på helgerna.
         </p>
       </section>
       <section class="references">
-        <h2>References</h2>
+        <h2>Referenser</h2>
         <div>
           <p>
             Faraz Naeem<br />
-            COO & coach at Craft Academy<br />
+            COO & coach på Craft Academy<br />
             faraz@craftacademy.se
           </p>
           <p>
             Oliver Ochman<br />
-            Coach at Craft Academy<br />
+            Coach på Craft Academy<br />
             oliver@craftacademy.se
           </p>
         </div>
