--- a/swedish/index.html
+++ b/swedish/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#8aa2b1" />
     <title>Erik Björn Web Résumé</title>
-    <link href="index.css" rel="stylesheet" />
+    <link href="../index.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -17,7 +17,7 @@
           onmouseout="collapseHeader()" 
           onclick="storeScrollPosition()"
         >
-          <a href="index.html">EN</a><span>|</span><a href="swedish.html">SE</a>
+          <a href="../">EN</a><span>|</span><a href="./">SE</a>
         </div>
         <div onmouseover="expandHeader()" onmouseout="collapseHeader()"></div>
         <header onmouseover="expandHeader()" onmouseout="collapseHeader()">
@@ -28,13 +28,13 @@
           <span class="contact-details">erik.g.bjoern@gmail.com</span>
           <span class="vertical-divider">|</span>
           <a href="https://www.linkedin.com/in/erikbjoern/" target="_blank">
-            <img class="linkedin white large-icon" src="Assets/LI-Logo.png" alt="LinkedIn logo" />
-            <img class="linkedin white small-icon" src="Assets/LI-In-Bug.png" alt="LinkedIn logo" />
+            <img class="linkedin white large-icon" src="../assets/LI-Logo.png" alt="LinkedIn logo" />
+            <img class="linkedin white small-icon" src="../assets/LI-In-Bug.png" alt="LinkedIn logo" />
           </a>
           <span class="linkedin-github-divider">|</span>
           <a href="https://github.com/erikbjoern" target="_blank">
-            <img class="github large-icon" src="Assets/GitHub_Logo_White.png" alt="GitHub logo" />
-            <img class="github small-icon" src="Assets/GitHub-Mark-Light-32px.png" alt="GitHub logo" />
+            <img class="github large-icon" src="../assets/GitHub_Logo_White.png" alt="GitHub logo" />
+            <img class="github small-icon" src="../assets/GitHub-Mark-Light-32px.png" alt="GitHub logo" />
           </a>
         </header>
       </div>
@@ -197,17 +197,17 @@
         <span class="vertical-divider">|</span>
         <div class="footer-links">
           <a href="https://www.linkedin.com/in/erikbjoern/" target="_blank">
-            <img class="linkedin large-icon" src="Assets/LI-Logo.png" alt="LinkedIn logo" height="20px"/>
-            <img class="linkedin small-icon" src="Assets/LI-In-Bug.png" alt="LinkedIn logo" height="20px"/>
+            <img class="linkedin large-icon" src="../assets/LI-Logo.png" alt="LinkedIn logo" height="20px"/>
+            <img class="linkedin small-icon" src="../assets/LI-In-Bug.png" alt="LinkedIn logo" height="20px"/>
           </a>
           <span class="LinkedIn/GitHub divider">|</span>
           <a href="https://github.com/erikbjoern" target="_blank">
-            <img class="github large-icon" src="Assets/GitHub_Logo.png" alt="GitHub logo" height="28px" style="margin-top: -5px" />
-            <img class="github small-icon" src="Assets/GitHub-Mark-32px.png" alt="GitHub logo" height="22px" style="margin: -2px 0 0 3px" />
+            <img class="github large-icon" src="../assets/GitHub_Logo.png" alt="GitHub logo" height="28px" style="margin-top: -5px" />
+            <img class="github small-icon" src="../assets/GitHub-Mark-32px.png" alt="GitHub logo" height="22px" style="margin: -2px 0 0 3px" />
           </a>
         </div>
       </footer>
     </div>
-    <script src="index.js"></script>
+    <script src="../index.js"></script>
   </body>
 </html>
