adding link to download as PDF, correcting .collapsed language-switch behaviour

--- a/swedish/index.html
+++ b/swedish/index.html
@@ -7,6 +7,7 @@
     <title>Erik Björn Web Résumé</title>
     <link href="../index.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/702a7c513c.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="main-container">
@@ -36,6 +37,14 @@
             <img class="github large-icon" src="../assets/GitHub_Logo_White.png" alt="GitHub logo" />
             <img class="github small-icon" src="../assets/GitHub-Mark-Light-32px.png" alt="GitHub logo" />
           </a>
+          <span class="download-divider">|</span>
+          <a href="./download/eb-cv-eng.pdf" download target="_blank">
+            <i class="fas fa-file-download white" onmouseover="toggleTooltip()" onmouseout="toggleTooltip()"></i>
+          </a>
+          <div class="tooltip">
+            <span class="long-version">Download<br> as </span>
+            PDF
+          </div>
         </header>
       </div>
       <h1>CV</h1>
