adding style to active/inactive language, other minor fixes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           onmouseout="collapseHeader()" 
           onclick="storeScrollPosition()"
         >
-          <a href="./">EN</a><span>|</span><a href="./swedish/">SE</a>
+          <a class="active">EN</a><span>|</span><a class="inactive" href="./swedish/">SE</a>
         </div>
         <div onmouseover="expandHeader()" onmouseout="collapseHeader()"></div>
         <header onmouseover="expandHeader()" onmouseout="collapseHeader()">
