--- a/swedish/index.html
+++ b/swedish/index.html
@@ -18,7 +18,7 @@
           onmouseout="collapseHeader()" 
           onclick="storeScrollPosition()"
         >
-          <a href="../">EN</a><span>|</span><a href="./">SE</a>
+          <a href="../" class="inactive">EN</a><span>|</span><a class="active">SE</a>
         </div>
         <div onmouseover="expandHeader()" onmouseout="collapseHeader()"></div>
         <header onmouseover="expandHeader()" onmouseout="collapseHeader()">
