--- a/swedish/index.html
+++ b/swedish/index.html
@@ -163,7 +163,7 @@
           men även t.ex. att hjälpa till med personlig vård och hygien samt daglig dokumentation.
         </p>
         <h3>Takskottare, kock och andra tillfälliga jobb</h3>
-        <p class="heading-4">Norge och Sverige</span><span>oct 2017 - feb 2019</p>
+        <p class="heading-4">Norge och Sverige</span><span>okt 2017 - feb 2019</p>
         <p>
           Under en period på ca ett och ett halvt år fick jag möjlighet att jobba med en mängd olika
           saker, bl.a. som kock, snickare, grafisk designer, takskottare, med kycklingproduktion,
